; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_midi_output_timer.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_midi_output_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdspm_midi = type { i32, i32, i64 }
%struct.timer_list = type { i32 }

@timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@hmidi = common dso_local global %struct.hdspm_midi* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*)* @snd_hdspm_midi_output_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_hdspm_midi_output_timer(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.hdspm_midi*, align 8
  %4 = alloca i64, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %5 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %6 = ptrtoint %struct.hdspm_midi* %5 to i32
  %7 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %8 = load i32, i32* @timer, align 4
  %9 = call %struct.hdspm_midi* @from_timer(i32 %6, %struct.timer_list* %7, i32 %8)
  store %struct.hdspm_midi* %9, %struct.hdspm_midi** %3, align 8
  %10 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %11 = call i32 @snd_hdspm_midi_output_write(%struct.hdspm_midi* %10)
  %12 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %13 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %12, i32 0, i32 0
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %17 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %1
  %21 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %22 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %21, i32 0, i32 1
  %23 = load i64, i64* @jiffies, align 8
  %24 = add nsw i64 1, %23
  %25 = call i32 @mod_timer(i32* %22, i64 %24)
  br label %26

26:                                               ; preds = %20, %1
  %27 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %28 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %27, i32 0, i32 0
  %29 = load i64, i64* %4, align 8
  %30 = call i32 @spin_unlock_irqrestore(i32* %28, i64 %29)
  ret void
}

declare dso_local %struct.hdspm_midi* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @snd_hdspm_midi_output_write(%struct.hdspm_midi*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
